# huffman-codec

./: Cargo.toml  README.md  callgrind.out.8716  huffman.pl
.github/workflows/: build.yml
benches/: basic.rs  huffman_wiki.txt
src/: lib.rs
