[package]
name = "huffman-codec"
version = "0.1.5"
authors = ["4meta5 <asinghchrony@protonmail.com>"]
edition = "2018"
license = "Unlicense"
repository = "https://github.com/4meta5/huffman-codec"
description = "no_std codec for lossless compression via huffman codes"

[features]
default = []
nightly-features = []

[dependencies]
